# basic_opengl_with_cmake_on_mac

./: CMakeLists.txt  README.md
src/: glad.c
